--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,11 @@
-.triangle {
+#triangle-up {
   width: 0;
   height: 0;
-  border-top: 50px solid rgba(255, 255, 0, 1);
-  border-right: 100px solid transparent;
+  border-left: 50px solid transparent;
+  border-right: 50px solid transparent;
+  border-bottom: 100px solid red;
+}
+
+.result {
+  display: none;
 }
